--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
 SESSION_ID=
-OWNER_NUMBER=2347043759577,2348123456789
-BOT_NAME=𝐐𝐔𝐄𝐄𝐍_𝐀𝐍𝐈𝐓𝐀-𝐕𝟒
-OWNER_NAME=David Cyril
-PACK_NAME=𝐐𝐔𝐄𝐄𝐍_𝐀𝐍𝐈𝐓𝐀-𝐕𝟒
-AUTHOR=𝐃𝐀𝐕𝐈𝐃 𝐂𝐘𝐑𝐈𝐋
-CHANNEL_NAME=𝐃𝐀𝐕𝐈𝐃 𝐂𝐘𝐑𝐈𝐋
+OWNER_NUMBER=26778615687,+267 77 097 571,+267 78 204 561
+BOT_NAME=krugar_-𝐕𝟒
+OWNER_NAME=krugar
+PACK_NAME=krugar_-𝐕𝟒
+AUTHOR=krugar
+CHANNEL_NAME=krugar,Mob Ties,Muzan 
 CHANNEL_JID=120363315231436175@newsletter
 AUTO_TYPING=false
 AUTO_RECORD=false
@@ -24,7 +24,7 @@ AUTO_READ_MESSAGES=false
 CHATBOT=false
 AUTO_REACT=false
 WELCOME=false
-PREFIX=.
+PREFIX=-
 AUTO_BIO=false
 ANTICALL=false
 ANTILINK=false
